--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: "HYDRA: HYdrological Drought & Rainfall Atlas"
 description: "Regression and visualization toolkit for teleconnections and drought analysis"
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+  - jekyll-remote-theme
 markdown: kramdown
