--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: "HYDRA: HYdrological Drought & Rainfall Atlas"
 description: "Regression and visualization toolkit for teleconnections and drought analysis"
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-  - jekyll-remote-theme
+#theme: jekyll-theme-cayman
+theme: none
 markdown: kramdown
