--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: "HYDRA: HYdrological Drought & Rainfall Atlas"
 description: "Regression and visualization toolkit for teleconnections and drought analysis"
-#theme: jekyll-theme-cayman
-theme: none
+theme: jekyll-theme-cayman
 markdown: kramdown
